:wheelchair: - style: fix problematic contrast on dark mode AttributeList component

--- a/src/components/data/attributelist/attributelist.scss
+++ b/src/components/data/attributelist/attributelist.scss
@@ -29,6 +29,7 @@
   }
 
   &__key {
+    color: var(--typography-color-h);
     font-weight: var(--typography-font-weight-bold);
   }
 
